// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LobbyView > renders with AppBar android 1`] = `
<div>
  <div
    class="_bar_221541"
  >
    <header>
      <button
        aria-labelledby="_r_36_"
        class="_icon-button_1215g_8 _primaryButton_221541"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="_secondaryButton_221541"
      />
    </header>
  </div>
  <div
    class="_inRoom_4e7ff8"
  >
    <div
      class="_content_f9ee84"
    >
      <div
        class="_preview_dd2178"
      >
        <video
          disablepictureinpicture=""
          playsinline=""
          poster="/src/graphics/video-placeholder.gif"
          tabindex="-1"
        />
        <div
          class="_avatarContainer_dd2178"
        >
          <div>
            <span
              aria-label="@user:example.org"
              class="_avatar_va14e_8 _avatar-imageless_va14e_55"
              data-color="6"
              data-type="round"
              role="img"
              style="--cpd-avatar-size: NaNpx;"
            >
              T
            </span>
          </div>
        </div>
        <div
          class="_buttonBar_dd2178"
        >
          <button
            aria-disabled="true"
            class="_button_1nw83_8 _join_f9ee84 _wait_f9ee84"
            data-kind="primary"
            data-size="md"
            data-testid="lobby_joinCall"
            role="button"
            tabindex="0"
          >
            Join call
          </button>
        </div>
      </div>
      <a
        class="_link_13esb_8"
        data-kind="primary"
        data-size="md"
        href="/"
        rel="noreferrer noopener"
      >
        Back to recents
      </a>
    </div>
    <div
      class="_footer_20b7b4"
      data-testid="footer-container"
    >
      <div
        class="_settingsLogoContainer_20b7b4"
      >
        <button
          aria-labelledby="_r_3c_"
          class="_icon-button_1215g_8 _settingsOnlyShowWide_20b7b4"
          data-kind="secondary"
          data-testid="settings-bottom-left"
          role="button"
          style="--cpd-icon-button-size: 32px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              style="transform: scale(0.75); transform-origin: center;"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,96a32,32,0,1,0,32,32A32,32,0,0,0,128,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,144Zm0-64A32,32,0,1,0,96,48,32,32,0,0,0,128,80Zm0-48a16,16,0,1,1-16,16A16,16,0,0,1,128,32Zm0,144a32,32,0,1,0,32,32A32,32,0,0,0,128,176Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,224Z"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="_buttons_20b7b4"
      >
        <button
          aria-labelledby="_r_3h_"
          class="_button_1nw83_8 _settingsOnlyShowNarrow_20b7b4 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="secondary"
          data-size="lg"
          data-testid="settings-bottom-center"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            style="transform: scale(0.75); transform-origin: center;"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,96a32,32,0,1,0,32,32A32,32,0,0,0,128,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,144Zm0-64A32,32,0,1,0,96,48,32,32,0,0,0,128,80Zm0-48a16,16,0,1,1-16,16A16,16,0,0,1,128,32Zm0,144a32,32,0,1,0,32,32A32,32,0,0,0,128,176Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,224Z"
            />
          </svg>
        </button>
        <button
          aria-busy="false"
          aria-checked="false"
          aria-disabled="true"
          aria-labelledby="_r_3m_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="primary"
          data-size="lg"
          data-testid="incall_mute"
          role="switch"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.38,229.92a8,8,0,0,1-11.3-.54l-30.92-34A78.83,78.83,0,0,1,136,207.59V240a8,8,0,0,1-16,0V207.6A80.11,80.11,0,0,1,48,128a8,8,0,0,1,16,0,64.07,64.07,0,0,0,64,64,63.41,63.41,0,0,0,32.21-8.68l-11.1-12.2A48,48,0,0,1,80,128V95.09L42.08,53.38A8,8,0,0,1,53.92,42.62l160,176A8,8,0,0,1,213.38,229.92Zm-24.19-63.13a7.88,7.88,0,0,0,3.51.82,8,8,0,0,0,7.19-4.49A79.16,79.16,0,0,0,208,128a8,8,0,0,0-16,0,63.32,63.32,0,0,1-6.48,28.09A8,8,0,0,0,189.19,166.79Zm-27.33-29.22A8,8,0,0,0,175.74,133a49.49,49.49,0,0,0,.26-5V64A48,48,0,0,0,84,44.87a8,8,0,0,0,1.41,8.57Z"
            />
          </svg>
        </button>
        <button
          aria-busy="false"
          aria-checked="true"
          aria-disabled="false"
          aria-labelledby="_r_3r_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="secondary"
          data-size="lg"
          data-testid="incall_deafen"
          role="switch"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M201.89,54.66A103.43,103.43,0,0,0,128.79,24H128A104,104,0,0,0,24,128v56a24,24,0,0,0,24,24H64a24,24,0,0,0,24-24V144a24,24,0,0,0-24-24H40.36A88,88,0,0,1,128,40h.67a87.71,87.71,0,0,1,87,80H192a24,24,0,0,0-24,24v40a24,24,0,0,0,24,24h16a24,24,0,0,0,24-24V128A103.41,103.41,0,0,0,201.89,54.66ZM64,136a8,8,0,0,1,8,8v40a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V136Zm152,48a8,8,0,0,1-8,8H192a8,8,0,0,1-8-8V144a8,8,0,0,1,8-8h24Z"
            />
          </svg>
        </button>
        <button
          aria-labelledby="_r_40_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53 _destructive_1nw83_110"
          data-kind="primary"
          data-size="lg"
          data-testid="incall_leave"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M231.59,90.13h0C175.44,34,80.56,34,24.41,90.13c-20,20-21.92,49.49-4.69,71.71A16,16,0,0,0,32.35,168a15.8,15.8,0,0,0,5.75-1.08l49-17.37.29-.11a16,16,0,0,0,9.75-11.73l5.9-29.52a76.52,76.52,0,0,1,49.68-.11h0l6.21,29.75a16,16,0,0,0,9.72,11.59l.29.11,49,17.39a16,16,0,0,0,18.38-5.06C253.51,139.62,251.58,110.13,231.59,90.13ZM223.67,152l-.3-.12-48.82-17.33-6.21-29.74A16,16,0,0,0,158,93a92.56,92.56,0,0,0-60.34.13,16,16,0,0,0-10.32,12l-5.9,29.51L32.63,151.86c-.1,0-.17.13-.27.17-12.33-15.91-11-36.23,3.36-50.58,25-25,58.65-37.53,92.28-37.53s67.27,12.51,92.28,37.53C234.61,115.8,236,136.12,223.67,152Zm.32,48a8,8,0,0,1-8,8H40a8,8,0,0,1,0-16H216A8,8,0,0,1,224,200Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LobbyView > renders with AppBar ios 1`] = `
<div>
  <div
    class="_bar_221541"
  >
    <header>
      <button
        aria-labelledby="_r_4a_"
        class="_icon-button_1215g_8 _primaryButton_221541"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="_secondaryButton_221541"
      />
    </header>
  </div>
  <div
    class="_inRoom_4e7ff8"
  >
    <div
      class="_content_f9ee84"
    >
      <div
        class="_preview_dd2178"
      >
        <video
          disablepictureinpicture=""
          playsinline=""
          poster="/src/graphics/video-placeholder.gif"
          tabindex="-1"
        />
        <div
          class="_avatarContainer_dd2178"
        >
          <div>
            <span
              aria-label="@user:example.org"
              class="_avatar_va14e_8 _avatar-imageless_va14e_55"
              data-color="6"
              data-type="round"
              role="img"
              style="--cpd-avatar-size: NaNpx;"
            >
              T
            </span>
          </div>
        </div>
        <div
          class="_buttonBar_dd2178"
        >
          <button
            aria-disabled="true"
            class="_button_1nw83_8 _join_f9ee84 _wait_f9ee84"
            data-kind="primary"
            data-size="md"
            data-testid="lobby_joinCall"
            role="button"
            tabindex="0"
          >
            Join call
          </button>
        </div>
      </div>
      <a
        class="_link_13esb_8"
        data-kind="primary"
        data-size="md"
        href="/"
        rel="noreferrer noopener"
      >
        Back to recents
      </a>
    </div>
    <div
      class="_footer_20b7b4"
      data-testid="footer-container"
    >
      <div
        class="_settingsLogoContainer_20b7b4"
      >
        <button
          aria-labelledby="_r_4g_"
          class="_icon-button_1215g_8 _settingsOnlyShowWide_20b7b4"
          data-kind="secondary"
          data-testid="settings-bottom-left"
          role="button"
          style="--cpd-icon-button-size: 32px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              style="transform: scale(0.75); transform-origin: center;"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,96a32,32,0,1,0,32,32A32,32,0,0,0,128,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,144Zm0-64A32,32,0,1,0,96,48,32,32,0,0,0,128,80Zm0-48a16,16,0,1,1-16,16A16,16,0,0,1,128,32Zm0,144a32,32,0,1,0,32,32A32,32,0,0,0,128,176Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,224Z"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="_buttons_20b7b4"
      >
        <button
          aria-labelledby="_r_4l_"
          class="_button_1nw83_8 _settingsOnlyShowNarrow_20b7b4 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="secondary"
          data-size="lg"
          data-testid="settings-bottom-center"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            style="transform: scale(0.75); transform-origin: center;"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,96a32,32,0,1,0,32,32A32,32,0,0,0,128,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,144ZM48,96a32,32,0,1,0,32,32A32,32,0,0,0,48,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,48,144ZM208,96a32,32,0,1,0,32,32A32,32,0,0,0,208,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,208,144Z"
            />
          </svg>
        </button>
        <button
          aria-busy="false"
          aria-checked="false"
          aria-disabled="true"
          aria-labelledby="_r_4q_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="primary"
          data-size="lg"
          data-testid="incall_mute"
          role="switch"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.38,229.92a8,8,0,0,1-11.3-.54l-30.92-34A78.83,78.83,0,0,1,136,207.59V240a8,8,0,0,1-16,0V207.6A80.11,80.11,0,0,1,48,128a8,8,0,0,1,16,0,64.07,64.07,0,0,0,64,64,63.41,63.41,0,0,0,32.21-8.68l-11.1-12.2A48,48,0,0,1,80,128V95.09L42.08,53.38A8,8,0,0,1,53.92,42.62l160,176A8,8,0,0,1,213.38,229.92Zm-24.19-63.13a7.88,7.88,0,0,0,3.51.82,8,8,0,0,0,7.19-4.49A79.16,79.16,0,0,0,208,128a8,8,0,0,0-16,0,63.32,63.32,0,0,1-6.48,28.09A8,8,0,0,0,189.19,166.79Zm-27.33-29.22A8,8,0,0,0,175.74,133a49.49,49.49,0,0,0,.26-5V64A48,48,0,0,0,84,44.87a8,8,0,0,0,1.41,8.57Z"
            />
          </svg>
        </button>
        <button
          aria-busy="false"
          aria-checked="true"
          aria-disabled="false"
          aria-labelledby="_r_4v_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="secondary"
          data-size="lg"
          data-testid="incall_deafen"
          role="switch"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M201.89,54.66A103.43,103.43,0,0,0,128.79,24H128A104,104,0,0,0,24,128v56a24,24,0,0,0,24,24H64a24,24,0,0,0,24-24V144a24,24,0,0,0-24-24H40.36A88,88,0,0,1,128,40h.67a87.71,87.71,0,0,1,87,80H192a24,24,0,0,0-24,24v40a24,24,0,0,0,24,24h16a24,24,0,0,0,24-24V128A103.41,103.41,0,0,0,201.89,54.66ZM64,136a8,8,0,0,1,8,8v40a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V136Zm152,48a8,8,0,0,1-8,8H192a8,8,0,0,1-8-8V144a8,8,0,0,1,8-8h24Z"
            />
          </svg>
        </button>
        <button
          aria-labelledby="_r_54_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53 _destructive_1nw83_110"
          data-kind="primary"
          data-size="lg"
          data-testid="incall_leave"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M231.59,90.13h0C175.44,34,80.56,34,24.41,90.13c-20,20-21.92,49.49-4.69,71.71A16,16,0,0,0,32.35,168a15.8,15.8,0,0,0,5.75-1.08l49-17.37.29-.11a16,16,0,0,0,9.75-11.73l5.9-29.52a76.52,76.52,0,0,1,49.68-.11h0l6.21,29.75a16,16,0,0,0,9.72,11.59l.29.11,49,17.39a16,16,0,0,0,18.38-5.06C253.51,139.62,251.58,110.13,231.59,90.13ZM223.67,152l-.3-.12-48.82-17.33-6.21-29.74A16,16,0,0,0,158,93a92.56,92.56,0,0,0-60.34.13,16,16,0,0,0-10.32,12l-5.9,29.51L32.63,151.86c-.1,0-.17.13-.27.17-12.33-15.91-11-36.23,3.36-50.58,25-25,58.65-37.53,92.28-37.53s67.27,12.51,92.28,37.53C234.61,115.8,236,136.12,223.67,152Zm.32,48a8,8,0,0,1-8,8H40a8,8,0,0,1,0-16H216A8,8,0,0,1,224,200Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LobbyView > renders with header and participant count 1`] = `
<div>
  <div
    class="_inRoom_4e7ff8"
  >
    <header
      class="_header_e4b327"
    >
      <div
        class="_nav_e4b327 _leftNav_e4b327"
      >
        <div
          class="_roomHeaderInfo_e4b327"
          data-size="lg"
        >
          <span
            aria-label="!room:example.org"
            class="_avatar_va14e_8 _roomAvatar_e4b327 _avatar-imageless_va14e_55"
            data-color="3"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 56px;"
          >
            T
          </span>
          <div
            class="_nameLine_e4b327"
          >
            <h1
              class="_typography_6v6n8_153 _font-heading-md-semibold_6v6n8_112"
              data-testid="roomHeader_roomName"
            >
              Test Room
            </h1>
            <span
              tabindex="0"
            >
              <svg
                aria-labelledby="_r_0_"
                class="_lock_edc97d"
                data-encrypted="false"
                fill="currentColor"
                height="16"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M208,80H96V56a32,32,0,0,1,32-32c15.37,0,29.2,11,32.16,25.59a8,8,0,0,0,15.68-3.18C171.32,24.15,151.2,8,128,8A48.05,48.05,0,0,0,80,56V80H48A16,16,0,0,0,32,96V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V96A16,16,0,0,0,208,80Zm0,128H48V96H208V208Zm-68-56a12,12,0,1,1-12-12A12,12,0,0,1,140,152Z"
                />
              </svg>
            </span>
          </div>
          <div
            class="_participantsLine_e4b327"
          >
            <svg
              aria-label="Participants"
              fill="currentColor"
              height="20"
              viewBox="0 0 256 256"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"
              />
            </svg>
            <span
              class="_typography_6v6n8_153 _font-body-sm-medium_6v6n8_41"
              data-testid="roomHeader_participants_count"
            >
              3
            </span>
          </div>
        </div>
      </div>
      <div
        class="_nav_e4b327 _rightNav_e4b327"
      />
    </header>
    <div
      class="_content_f9ee84"
    >
      <div
        class="_preview_dd2178"
      >
        <video
          disablepictureinpicture=""
          playsinline=""
          poster="/src/graphics/video-placeholder.gif"
          tabindex="-1"
        />
        <div
          class="_avatarContainer_dd2178"
        >
          <div>
            <span
              aria-label="@user:example.org"
              class="_avatar_va14e_8 _avatar-imageless_va14e_55"
              data-color="6"
              data-type="round"
              role="img"
              style="--cpd-avatar-size: NaNpx;"
            >
              T
            </span>
          </div>
        </div>
        <div
          class="_buttonBar_dd2178"
        >
          <button
            class="_button_1nw83_8 _join_f9ee84"
            data-kind="primary"
            data-size="lg"
            data-testid="lobby_joinCall"
            role="button"
            tabindex="0"
          >
            Join call
          </button>
        </div>
      </div>
      <a
        class="_link_13esb_8"
        data-kind="primary"
        data-size="md"
        href="/"
        rel="noreferrer noopener"
      >
        Back to recents
      </a>
    </div>
    <div
      class="_footer_20b7b4"
      data-testid="footer-container"
    >
      <div
        class="_settingsLogoContainer_20b7b4"
      >
        <button
          aria-labelledby="_r_6_"
          class="_icon-button_1215g_8 _settingsOnlyShowWide_20b7b4"
          data-kind="secondary"
          data-testid="settings-bottom-left"
          role="button"
          style="--cpd-icon-button-size: 32px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              style="transform: scale(0.75); transform-origin: center;"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,96a32,32,0,1,0,32,32A32,32,0,0,0,128,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,144Zm0-64A32,32,0,1,0,96,48,32,32,0,0,0,128,80Zm0-48a16,16,0,1,1-16,16A16,16,0,0,1,128,32Zm0,144a32,32,0,1,0,32,32A32,32,0,0,0,128,176Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,224Z"
              />
            </svg>
          </div>
        </button>
        <div
          class="_logo_20b7b4"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            viewBox="0 0 48 48"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="Logo Mark"
            >
              <rect
                fill="#0DBD8B"
                height="48"
                rx="23.93"
                width="47.86"
              />
              <g
                id="Union"
              >
                <path
                  d="M21.3075 9.42871C20.3396 9.42871 19.5549 10.214 19.5549 11.1828C19.5549 12.1516 20.3396 12.9369 21.3075 12.9369C25.9321 12.9369 29.6811 16.689 29.6811 21.3175C29.6811 22.2863 30.4657 23.0716 31.4337 23.0716C32.4016 23.0716 33.1863 22.2863 33.1863 21.3175C33.1863 14.7515 27.868 9.42871 21.3075 9.42871Z"
                  fill="white"
                />
                <path
                  d="M38.4591 21.3174C38.4591 20.3486 37.6745 19.5633 36.7065 19.5633C35.7386 19.5633 34.9539 20.3486 34.9539 21.3174C34.9539 25.9459 31.2049 29.698 26.5804 29.698C25.6124 29.698 24.8277 30.4833 24.8277 31.4521C24.8277 32.4209 25.6124 33.2062 26.5804 33.2062C33.1408 33.2062 38.4591 27.8834 38.4591 21.3174Z"
                  fill="white"
                />
                <path
                  d="M28.3329 36.8173C28.3329 37.786 27.5482 38.5714 26.5803 38.5714C20.0198 38.5714 14.7015 33.2486 14.7015 26.6826C14.7015 25.7138 15.4862 24.9285 16.4541 24.9285C17.4221 24.9285 18.2067 25.7138 18.2067 26.6826C18.2067 31.3111 21.9557 35.0632 26.5803 35.0632C27.5482 35.0632 28.3329 35.8485 28.3329 36.8173Z"
                  fill="white"
                />
                <path
                  d="M9.40112 26.6827C9.40112 27.6514 10.1858 28.4368 11.1537 28.4368C12.1217 28.4368 12.9064 27.6514 12.9064 26.6827C12.9064 22.0542 16.6553 18.3021 21.2799 18.3021C22.2478 18.3021 23.0325 17.5167 23.0325 16.548C23.0325 15.5792 22.2478 14.7939 21.2799 14.7939C14.7194 14.7939 9.40112 20.1167 9.40112 26.6827Z"
                  fill="white"
                />
              </g>
            </g>
          </svg>
          <svg
            aria-label="Element Call"
            fill="none"
            height="11"
            viewBox="0 0 160 22"
            width="80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="Logo Type"
            >
              <g
                id="Vector"
              >
                <path
                  d="M14.8673 15.1575H3.39742C3.53293 16.3508 3.96849 17.3036 4.70411 18.0157C5.43974 18.7087 6.40766 19.0551 7.60789 19.0551C8.40159 19.0551 9.11785 18.8626 9.75668 18.4777C10.3955 18.0927 10.8504 17.5731 11.1215 16.9186H14.606C14.1414 18.4392 13.2702 19.671 11.9926 20.6142C10.7343 21.5381 9.24368 22 7.52078 22C5.27519 22 3.45549 21.259 2.06168 19.7769C0.687227 18.2948 0 16.4182 0 14.147C0 11.9335 0.696906 10.0761 2.09072 8.5748C3.48453 7.07349 5.28487 6.32283 7.49174 6.32283C9.69861 6.32283 11.4796 7.06387 12.8347 8.54593C14.2091 10.0087 14.8964 11.8565 14.8964 14.0892L14.8673 15.1575ZM7.49174 9.12336C6.40766 9.12336 5.50749 9.44095 4.79123 10.0761C4.07496 10.7113 3.62972 11.5582 3.45549 12.6168H11.4699C11.315 11.5582 10.8892 10.7113 10.1922 10.0761C9.49534 9.44095 8.59517 9.12336 7.49174 9.12336Z"
                  fill="currentColor"
                />
                <path
                  d="M17.2743 17.1785V0H20.7298V17.2362C20.7298 18.0061 21.1557 18.3911 22.0074 18.3911L22.6172 18.3622V21.6247C22.2881 21.6824 21.9397 21.7113 21.5719 21.7113C20.0813 21.7113 18.9875 21.336 18.2906 20.5853C17.6131 19.8346 17.2743 18.699 17.2743 17.1785Z"
                  fill="currentColor"
                />
                <path
                  d="M38.71 15.1575H27.2401C27.3756 16.3508 27.8112 17.3036 28.5468 18.0157C29.2824 18.7087 30.2504 19.0551 31.4506 19.0551C32.2443 19.0551 32.9606 18.8626 33.5994 18.4777C34.2382 18.0927 34.6931 17.5731 34.9642 16.9186H38.4487C37.9841 18.4392 37.113 19.671 35.8353 20.6142C34.577 21.5381 33.0864 22 31.3635 22C29.1179 22 27.2982 21.259 25.9044 19.7769C24.5299 18.2948 23.8427 16.4182 23.8427 14.147C23.8427 11.9335 24.5396 10.0761 25.9334 8.5748C27.3272 7.07349 29.1276 6.32283 31.3344 6.32283C33.5413 6.32283 35.3223 7.06387 36.6774 8.54593C38.0518 10.0087 38.7391 11.8565 38.7391 14.0892L38.71 15.1575ZM31.3344 9.12336C30.2504 9.12336 29.3502 9.44095 28.6339 10.0761C27.9177 10.7113 27.4724 11.5582 27.2982 12.6168H35.3126C35.1577 11.5582 34.7319 10.7113 34.035 10.0761C33.3381 9.44095 32.4379 9.12336 31.3344 9.12336Z"
                  fill="currentColor"
                />
                <path
                  d="M54.3001 13.0499V21.6535H50.8446V12.6745C50.8446 10.4033 49.8961 9.26772 47.9989 9.26772C46.9729 9.26772 46.1502 9.59493 45.5307 10.2493C44.9306 10.9038 44.6306 11.7988 44.6306 12.9344V21.6535H41.1751V6.66929H44.3692V8.66142C44.737 7.98775 45.2984 7.42957 46.0534 6.98688C46.8084 6.54418 47.7473 6.32283 48.8701 6.32283C50.9608 6.32283 52.4707 7.11199 53.4 8.69029C54.6776 7.11199 56.3812 6.32283 58.5106 6.32283C60.2722 6.32283 61.6273 6.87139 62.5759 7.9685C63.5244 9.04637 63.9987 10.4707 63.9987 12.2415V21.6535H60.5432V12.6745C60.5432 10.4033 59.5947 9.26772 57.6975 9.26772C56.6522 9.26772 55.8198 9.60455 55.2003 10.2782C54.6002 10.9326 54.3001 11.8565 54.3001 13.0499Z"
                  fill="currentColor"
                />
                <path
                  d="M81.1834 15.1575H69.7135C69.849 16.3508 70.2846 17.3036 71.0202 18.0157C71.7558 18.7087 72.7237 19.0551 73.924 19.0551C74.7177 19.0551 75.4339 18.8626 76.0728 18.4777C76.7116 18.0927 77.1665 17.5731 77.4375 16.9186H80.9221C80.4575 18.4392 79.5863 19.671 78.3087 20.6142C77.0504 21.5381 75.5598 22 73.8369 22C71.5913 22 69.7716 21.259 68.3778 19.7769C67.0033 18.2948 66.3161 16.4182 66.3161 14.147C66.3161 11.9335 67.013 10.0761 68.4068 8.5748C69.8006 7.07349 71.601 6.32283 73.8078 6.32283C76.0147 6.32283 77.7957 7.06387 79.1508 8.54593C80.5252 10.0087 81.2124 11.8565 81.2124 14.0892L81.1834 15.1575ZM73.8078 9.12336C72.7237 9.12336 71.8236 9.44095 71.1073 10.0761C70.391 10.7113 69.9458 11.5582 69.7716 12.6168H77.786C77.6311 11.5582 77.2052 10.7113 76.5083 10.0761C75.8114 9.44095 74.9113 9.12336 73.8078 9.12336Z"
                  fill="currentColor"
                />
                <path
                  d="M86.8426 6.66929V8.66142C87.191 8.007 87.7621 7.45844 88.5558 7.01575C89.3689 6.55381 90.3465 6.32283 91.4886 6.32283C93.2696 6.32283 94.6441 6.86177 95.612 7.93963C96.5993 9.0175 97.0929 10.4514 97.0929 12.2415V21.6535H93.6374V12.6745C93.6374 11.6159 93.3858 10.7883 92.8824 10.1916C92.3985 9.57568 91.6532 9.26772 90.6465 9.26772C89.5431 9.26772 88.672 9.59493 88.0331 10.2493C87.4137 10.9038 87.1039 11.8084 87.1039 12.9633V21.6535H83.6484V6.66929H86.8426Z"
                  fill="currentColor"
                />
                <path
                  d="M107.185 18.5932V21.5669C106.759 21.6824 106.159 21.7402 105.384 21.7402C102.442 21.7402 100.971 20.2677 100.971 17.3228V9.41208H98.6766V6.66929H100.971V2.77165H104.426V6.66929H107.243V9.41208H104.426V16.9764C104.426 18.1505 104.987 18.7375 106.11 18.7375L107.185 18.5932Z"
                  fill="currentColor"
                />
                <path
                  d="M116.115 18.9881C114.474 17.2035 113.653 14.9429 113.653 12.2064C113.653 9.4699 114.474 7.21782 116.115 5.45015C117.773 3.66548 119.953 2.77314 122.654 2.77314C124.876 2.77314 126.756 3.38503 128.295 4.6088C129.833 5.83258 130.816 7.47277 131.244 9.52939H129.269C128.91 7.99967 128.132 6.7844 126.936 5.88357C125.739 4.98273 124.312 4.53232 122.654 4.53232C120.534 4.53232 118.824 5.23769 117.525 6.64842C116.243 8.05916 115.602 9.91182 115.602 12.2064C115.602 14.501 116.243 16.3536 117.525 17.7644C118.824 19.1751 120.534 19.8805 122.654 19.8805C124.312 19.8805 125.739 19.4301 126.936 18.5292C128.132 17.6284 128.91 16.4131 129.269 14.8834H131.244C130.816 16.94 129.833 18.5802 128.295 19.804C126.756 21.0278 124.876 21.6397 122.654 21.6397C119.953 21.6397 117.773 20.7558 116.115 18.9881Z"
                  fill="currentColor"
                />
                <path
                  d="M143.174 15.0874C140.832 15.0874 139.233 15.1384 138.379 15.2403C137.541 15.3253 136.926 15.4698 136.532 15.6738C135.831 16.0647 135.481 16.6936 135.481 17.5604C135.481 19.2261 136.473 20.0589 138.456 20.0589C139.977 20.0589 141.139 19.719 141.943 19.0391C142.763 18.3593 143.174 17.4499 143.174 16.3111V15.0874ZM138.25 21.5632C136.763 21.5632 135.626 21.2062 134.84 20.4924C134.071 19.7615 133.686 18.8012 133.686 17.6114C133.686 16.8295 133.891 16.1327 134.301 15.5208C134.729 14.9089 135.31 14.4585 136.045 14.1695C136.661 13.9316 137.455 13.7786 138.43 13.7106C139.404 13.6256 140.986 13.5831 143.174 13.5831V12.7418C143.174 10.6002 141.943 9.52939 139.481 9.52939C137.361 9.52939 136.131 10.3877 135.789 12.1044H134.019C134.207 10.8466 134.746 9.84383 135.635 9.09597C136.541 8.34811 137.849 7.97418 139.558 7.97418C141.387 7.97418 142.746 8.3991 143.635 9.24894C144.541 10.0988 144.994 11.2716 144.994 12.7673V21.2572H143.251V19.3706C142.345 20.8323 140.678 21.5632 138.25 21.5632Z"
                  fill="currentColor"
                />
                <path
                  d="M149.358 18.4018V2.13576H151.178V18.1978C151.178 18.7247 151.264 19.0901 151.435 19.2941C151.623 19.498 151.956 19.6 152.435 19.6L152.948 19.549V21.2062C152.657 21.2572 152.341 21.2827 151.999 21.2827C150.238 21.2827 149.358 20.3224 149.358 18.4018Z"
                  fill="currentColor"
                />
                <path
                  d="M155.944 18.4018V2.13576H157.764V18.1978C157.764 18.7247 157.85 19.0901 158.021 19.2941C158.209 19.498 158.542 19.6 159.021 19.6L159.534 19.549V21.2062C159.243 21.2572 158.927 21.2827 158.585 21.2827C156.824 21.2827 155.944 20.3224 155.944 18.4018Z"
                  fill="currentColor"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="_buttons_20b7b4"
      >
        <button
          aria-labelledby="_r_b_"
          class="_button_1nw83_8 _settingsOnlyShowNarrow_20b7b4 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="secondary"
          data-size="lg"
          data-testid="settings-bottom-center"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            style="transform: scale(0.75); transform-origin: center;"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,96a32,32,0,1,0,32,32A32,32,0,0,0,128,96Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,144Zm0-64A32,32,0,1,0,96,48,32,32,0,0,0,128,80Zm0-48a16,16,0,1,1-16,16A16,16,0,0,1,128,32Zm0,144a32,32,0,1,0,32,32A32,32,0,0,0,128,176Zm0,48a16,16,0,1,1,16-16A16,16,0,0,1,128,224Z"
            />
          </svg>
        </button>
        <button
          aria-busy="false"
          aria-checked="false"
          aria-disabled="true"
          aria-labelledby="_r_g_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="primary"
          data-size="lg"
          data-testid="incall_mute"
          role="switch"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M213.38,229.92a8,8,0,0,1-11.3-.54l-30.92-34A78.83,78.83,0,0,1,136,207.59V240a8,8,0,0,1-16,0V207.6A80.11,80.11,0,0,1,48,128a8,8,0,0,1,16,0,64.07,64.07,0,0,0,64,64,63.41,63.41,0,0,0,32.21-8.68l-11.1-12.2A48,48,0,0,1,80,128V95.09L42.08,53.38A8,8,0,0,1,53.92,42.62l160,176A8,8,0,0,1,213.38,229.92Zm-24.19-63.13a7.88,7.88,0,0,0,3.51.82,8,8,0,0,0,7.19-4.49A79.16,79.16,0,0,0,208,128a8,8,0,0,0-16,0,63.32,63.32,0,0,1-6.48,28.09A8,8,0,0,0,189.19,166.79Zm-27.33-29.22A8,8,0,0,0,175.74,133a49.49,49.49,0,0,0,.26-5V64A48,48,0,0,0,84,44.87a8,8,0,0,0,1.41,8.57Z"
            />
          </svg>
        </button>
        <button
          aria-busy="false"
          aria-checked="true"
          aria-disabled="false"
          aria-labelledby="_r_l_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
          data-kind="secondary"
          data-size="lg"
          data-testid="incall_deafen"
          role="switch"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M201.89,54.66A103.43,103.43,0,0,0,128.79,24H128A104,104,0,0,0,24,128v56a24,24,0,0,0,24,24H64a24,24,0,0,0,24-24V144a24,24,0,0,0-24-24H40.36A88,88,0,0,1,128,40h.67a87.71,87.71,0,0,1,87,80H192a24,24,0,0,0-24,24v40a24,24,0,0,0,24,24h16a24,24,0,0,0,24-24V128A103.41,103.41,0,0,0,201.89,54.66ZM64,136a8,8,0,0,1,8,8v40a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V136Zm152,48a8,8,0,0,1-8,8H192a8,8,0,0,1-8-8V144a8,8,0,0,1,8-8h24Z"
            />
          </svg>
        </button>
        <button
          aria-labelledby="_r_q_"
          class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53 _destructive_1nw83_110"
          data-kind="primary"
          data-size="lg"
          data-testid="incall_leave"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="24"
            viewBox="0 0 256 256"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M231.59,90.13h0C175.44,34,80.56,34,24.41,90.13c-20,20-21.92,49.49-4.69,71.71A16,16,0,0,0,32.35,168a15.8,15.8,0,0,0,5.75-1.08l49-17.37.29-.11a16,16,0,0,0,9.75-11.73l5.9-29.52a76.52,76.52,0,0,1,49.68-.11h0l6.21,29.75a16,16,0,0,0,9.72,11.59l.29.11,49,17.39a16,16,0,0,0,18.38-5.06C253.51,139.62,251.58,110.13,231.59,90.13ZM223.67,152l-.3-.12-48.82-17.33-6.21-29.74A16,16,0,0,0,158,93a92.56,92.56,0,0,0-60.34.13,16,16,0,0,0-10.32,12l-5.9,29.51L32.63,151.86c-.1,0-.17.13-.27.17-12.33-15.91-11-36.23,3.36-50.58,25-25,58.65-37.53,92.28-37.53s67.27,12.51,92.28,37.53C234.61,115.8,236,136.12,223.67,152Zm.32,48a8,8,0,0,1-8,8H40a8,8,0,0,1,0-16H216A8,8,0,0,1,224,200Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
